--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,12 @@ pydantic = "^2.12.5"
 pytest = "^8.0.0"
 black = "^24.1.0"
 mypy = "^1.8.0"
+pytest-asyncio = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = "src"
+testpaths = ["tests"]
