added new setting for devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
     "vscode": {
       "settings": {
         "python.defaultInterpreterPath": "/workspaces/app/.venv/bin/python",
-        "python.terminal.activateEnvInSelectedTerminal": true
+        "python.terminal.activateEnvInSelectedTerminal": true,
+        "python.analysis.extraPaths": ["/workspaces/app/src"]
       },
       "extensions": [
         "ms-python.python",
