--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [ main, develop, 'test-*' ]
+    branches: [ main, develop, 'test-*', 'test_*']
   pull_request:
-    branches: [ main, develop, 'test-*']
+    branches: [ main, develop, 'test-*', 'test_*']
 
 jobs:
   test:
